--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               <h4 class="title-text text-uppercase">Frontend dan Backend Developer</h4>
               <div class="site-button">
                 <div class="d-flex flex-row flex-wrap">
-                  <button type="button" class="btn button primary-button mr-4 text-uppercase">Pekerjakan Saya</button>
-                  <button type="button" class="btn button secondary-button text-uppercase">Unduh CV</button>
+                  <a href="https://bit.ly/36EeX1w"><button type="button" class="btn button primary-button mr-4 text-uppercase">Pekerjakan Saya</button></a>
+                  <a href="./download/RobbiDarwis_CV.pdf" download="Robbi Darwis_Curriculum Vitae.pdf"><button type="button" class="btn button secondary-button text-uppercase">Unduh CV</button></a>
                 </div>
               </div>
             </div>
@@ -107,17 +107,17 @@
             </div>
             <div class="col-lg-6 col-md-12 about-title">
               <h2 class="text-uppercase pt-5">
-                <span>Let Me</span>
-                <span>Introduce</span>
-                <span>Myself</span>
+                <span>Tak kenal</span>
+                <span>Maka</span>
+                <span>Tak Sayang</span>
               </h2>
               <div class="paragraph py-4 w-75">
-                <p class="para1">Perkenalkan nama saya Muhammad Robbi Darwis. Saya memiliki hobbi berolahraga, traveling dan belajar hal baru. Selain itu saya juga menyukai pemprograman dalam bahasa PHP, CSS, Java dan Kotlin. Dalam hal pemprograman saya lebih mendalami dalam design UI/UX.
+                <p class="para1">Hello... nama saya Muhammad Robbi Darwis. Saya memiliki hobbi berolahraga, traveling, design UI/UX dan belajar hal baru. Selain itu saya juga memiliki pengalaman pemprograman dalam bahasa PHP, CSS, Java dan Kotlin.
                 </p>
                 <p class="para1">Saya juga menyukai fotografi dan menguasai beberapa aplikasi editing foto maupun video. Aplikasi yang saya kuasai antara lain Adobe XD, Photoshop, Lightroom, Premiere. Untuk aplikasi Microsoft saya menguasai MS Word, MS Excel dan MS Power Point.
                 </p>
               </div>
-              <button type="button" class="btn button primary-button text-uppercase">Unduh CV</button>
+              <a href="./download/RobbiDarwis_CV.pdf" download="Robbi Darwis_Curriculum Vitae.pdf"><button type="button" class="btn button primary-button text-uppercase">Unduh CV</button></a>
             </div>
           </div>
         </div>
@@ -134,47 +134,47 @@
               <div class="first-row row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/CSS.jpg" alt="Brand-1">
+                    <img src="./img/service/CSS.png" alt="Brand-1">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/PHP.jpg" alt="Brand-2">
+                    <img src="./img/service/PHP.png" alt="Brand-2">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/kotlin.jpg" alt="Brand-3">
+                    <img src="./img/service/KOTLIN.png" alt="Brand-3">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/java.jpg" alt="Brand-4">
+                    <img src="./img/service/JAVA.png" alt="Brand-4">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/HTML.jpg" alt="Brand-5">
+                    <img src="./img/service/HTML.png" alt="Brand-5">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/SQL.jpg" alt="Brand-6">
+                    <img src="./img/service/SQL.png" alt="Brand-6">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/word.jpg" alt="Brand-7">
+                    <img src="./img/service/WORD.png" alt="Brand-7">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/powerpoint.jpg" alt="Brand-8">
+                    <img src="./img/service/PPT.png" alt="Brand-8">
                   </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                   <div class="single-brand">
-                    <img src="./img/brands/Excel.jpg" alt="Brand-9">
+                    <img src="./img/service/EXCEL.png" alt="Brand-9">
                   </div>
                 </div>
               </div>
@@ -182,17 +182,16 @@
             <div class="col-xl-6 col-lg-12 col-md-12">
               <div class="experience-area">
                 <div class="d-flex flex-row years-area">
-                  <h2 class="p-3 years">10</h2>
+                  <h2 class="p-3 years">4</h2>
                   <h2>
-                    <span>Years</span>
-                    <span>Experience</span>
-                    <span>Working</span>
+                    <span>Tahun</span>
+                    <span>Pengalaman</span>
                   </h2>
                 </div>
                 <div class="d-flex flex-row flex-wrap call-area">
                   <span><i class="fas fa-phone-alt fa-3x px-3"></i></span>
                   <div class="call-now">
-                    <a href="#" class="text-uppercase h4 font-roboto">Call Now</a>
+                    <a class="h4 font-roboto">Panggil Sekarang</a>
                     <span class="font-roboto py-2">(+62) 812-3605-2632</span>
                   </div>
                 </div>
