--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
           </div>
           <div class="social text-center">
             <h5 class="text-uppercase">Follow</h5>
-            <a href="www.facebook.com/RobbiDarwis22"><i class="fab fa-facebook"></i></a>
-            <a href="www.instagram.com/mrobbidarwis/"><i class="fab fa-instagram"></i></a>
-            <a href="github.com/robbidarwis22"><i class="fab fa-github"></i></a>
+            <a href="https://facebook.com/RobbiDarwis22"><i class="fab fa-facebook"></i></a>
+            <a href="https://instagram.com/mrobbidarwis"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/robbidarwis22"><i class="fab fa-github"></i></a>
           </div>
           <div class="copyrights text-center">
             <p class="para">
